--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "bootstrap": "^5.3.0",
+    "firebase": "^9.23.0",
     "next": "13.4.7",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
   }
